Changes
=======

All issue numbers are relative to https://github.com/Toblerity/Fiona/issues.

1.9.5 (TBD)
-----------

- Preserve the null properties and geometry of a Feature when serializing
  (#1276).

1.9.4.post1 (2023-05-23)
------------------------

Extraneous files were unintentionally packaged in the 1.9.4 wheels. This post1
release excludes them so that wheel contents are as in version 1.9.3.

1.9.4 (2023-05-16)
------------------

- The performance of Feature.from_dict() has been improved (#1267).
- Several sources of meaningless log messages from fiona._geometry about NULL
  geometries are avoided (#1264).
- The Parquet driver has been added to the list of supported drivers and will
  be available if your system's GDAL library links libarrow. Note that fiona
  wheels on PyPI do not include libarrow as it is rather large.
- Ensure that fiona._vendor modules are found and included.
- Bytes type feature properties are now hex encoded when serializing to GeoJSON
  (#1263).
- Docstrings for listdir and listlayers have been clarified and harmonized.
- Nose style test cases have been converted to unittest.TestCase (#1256).
- The munch package used by fio-filter and fio-calc is now vendored and patched
  to remove usage of the deprecated pkg_resources module (#1255).

1.9.3 (2023-04-10)
------------------

- Rasterio CRS objects are compatible with the Collection constructor and are
  now accepted (#1248).
- Enable append mode for fio-load (#1237).
- Reading a GeoJSON with an empty array property can result in a segmentation
  fault since version 1.9.0. This has been fixed (#1228).

1.9.2 (2023-03-20)
------------------

- Get command entry points using importlib.metadata (#1220).
- Instead of warning, transform_geom() raises an exception when some points
  can't be reprojected unless the caller opts in to partial reprojection. This
  restores the behavior of version 1.8.22.
- Add support for open options to all CLI commands that call fiona.open
  (#1215).