@@ -38,13 +38,19 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.9', '3.10']
-        gdal-version: ['3.5.3', '3.6.2']
         include:
-          - python-version: '3.9'
+          - python-version: '3.7'
+            gdal-version: '3.4.3'
+          - python-version: '3.8'
             gdal-version: '3.4.3'
           - python-version: '3.9'
-            gdal-version: '3.3.3'
+            gdal-version: '3.5.3'
+          - python-version: '3.10'
+            gdal-version: '3.6.4'
+          - python-version: '3.11'
+            gdal-version: '3.7.1'
+          - python-version: '3.12'
+            gdal-version: '3.7.1'
 
     steps:
       - uses: actions/checkout@v3
