@@ -6,6 +6,7 @@ filterwarnings =
     ignore:.*negative step size may be slow*:RuntimeWarning
     ignore:.*is buggy and will be removed in Fiona 2.0.*
     ignore:.*unclosed <socket.socket
+    ignore:.*The 'strict' parameter is no longer needed
 markers =
     iconv: marks tests that require gdal to be compiled with iconv
     network: marks tests that require a network connection
